--- a/admin_sitemap.html
+++ b/admin_sitemap.html
@@ -268,87 +268,101 @@
           <h2>시스템관리 [표준관리]</h2>
           <ul>
             <li class="bg2"> 
-              <span class="sub-title">SC_ADMIN_001</span>
+              <span class="sub-title">표준- 분류 체계</span>
               <div class="btn-wrap">
                 <a href="pages/SC_ADMIN_001.html" target="viewer">SC_ADMIN_001.html</a>
                 <a href="pages/SC_ADMIN_001.html" target="_blank" class="new-win">새창</a>
               </div>
             </li>
             <li class="bg2">
-              <span class="sub-title">SC_ADMIN_002</span>
+              <span class="sub-title">표준 분류 - 편집</span>
               <div class="btn-wrap">
                 <a href="pages/SC_ADMIN_002.html" target="viewer">SC_ADMIN_002.html</a>
                 <a href="pages/SC_ADMIN_002.html" target="_blank" class="new-win">새창</a>
               </div>
             </li>
             <li class="bg2">
-              <span class="sub-title">SC_ADMIN_003</span>
+              <span class="sub-title">유효성 평가표 목록</span>
               <div class="btn-wrap">
                 <a href="pages/SC_ADMIN_003.html" target="viewer">SC_ADMIN_003.html</a>
                 <a href="pages/SC_ADMIN_003.html" target="_blank" class="new-win">새창</a>
               </div>
             </li>
             <li class="bg2">
-              <span class="sub-title">SC_ADMIN_004</span>
+              <span class="sub-title">유효성 평가표 - 편집</span>
               <div class="btn-wrap">
                 <a href="pages/SC_ADMIN_004.html" target="viewer">SC_ADMIN_004.html</a>
                 <a href="pages/SC_ADMIN_004.html" target="_blank" class="new-win">새창</a>
               </div>
             </li>
             <li class="bg2">
-              <span class="sub-title">SC_ADMIN_005</span>
+              <span class="sub-title">유성평가표 미리보기</span>
               <div class="btn-wrap">
                 <a href="pages/SC_ADMIN_005.html" target="viewer">SC_ADMIN_005.html</a>
                 <a href="pages/SC_ADMIN_005.html" target="_blank" class="new-win">새창</a>
               </div>
             </li>
             <li class="bg2">
-              <span class="sub-title">SC_ADMIN_006</span>
+              <span class="sub-title">유효성 평가표 속성 조회</span>
               <div class="btn-wrap">
                 <a href="pages/SC_ADMIN_006.html" target="viewer">SC_ADMIN_006.html</a>
                 <a href="pages/SC_ADMIN_006.html" target="_blank" class="new-win">새창</a>
               </div>
             </li>
             <li class="bg2">
-              <span class="sub-title">SC_ADMIN_007</span>
+              <span class="sub-title">표준 결제 모니터링</span>
               <div class="btn-wrap">
                 <a href="pages/SC_ADMIN_007.html" target="viewer">SC_ADMIN_007.html</a>
                 <a href="pages/SC_ADMIN_007.html" target="_blank" class="new-win">새창</a>
               </div>
             </li>
             <li class="bg2">
-              <span class="sub-title">SC_ADMIN_008</span>
+              <span class="sub-title">표준 결재 모니터링 - 결재 단계 필터</span>
+              <div class="btn-wrap">
+                <a href="pages/SC_ADMIN_007_결재 단계 필터.html" target="viewer">SC_ADMIN_007_결재 단계 필터.html</a>
+                <a href="pages/SC_ADMIN_007_결재 단계 필터.html" target="_blank" class="new-win">새창</a>
+              </div>
+            </li>
+            <li class="bg2">
+              <span class="sub-title">담당 부서 삭제된 표준 목록</span>
               <div class="btn-wrap">
                 <a href="pages/SC_ADMIN_008.html" target="viewer">SC_ADMIN_008.html</a>
                 <a href="pages/SC_ADMIN_008.html" target="_blank" class="new-win">새창</a>
               </div>
             </li>
             <li class="bg2">
-              <span class="sub-title">SC_ADMIN_009</span>
+              <span class="sub-title">폐기된 표준 목록</span>
               <div class="btn-wrap">
                 <a href="pages/SC_ADMIN_009.html" target="viewer">SC_ADMIN_009.html</a>
                 <a href="pages/SC_ADMIN_009.html" target="_blank" class="new-win">새창</a>
+              </div>
+            </li>
+            <li class="bg2">
+              <span class="sub-title">폐기된 표준 목록 (팝업)</span>
+              <div class="btn-wrap">
+                <a href="pages/SC_ADMIN_009_popup.html" target="viewer">SC_ADMIN_009_popup.html</a>
+                <a href="pages/SC_ADMIN_009_popup.html" target="_blank" class="new-win">새창</a>
               </div>
             </li>
           </ul>
           <h2>시스템관리 [경영매뉴얼]</h2>
           <ul>
             <li class="bg2"> 
-              <span class="sub-title">SC_ADMIN_101</span>
+              <span class="sub-title">경영매뉴얼 - 분류체계</span>
               <div class="btn-wrap">
                 <a href="pages/SC_ADMIN_101.html" target="viewer">SC_ADMIN_101.html</a>
                 <a href="pages/SC_ADMIN_101.html" target="_blank" class="new-win">새창</a>
               </div>
             </li>
             <li class="bg2"> 
-              <span class="sub-title">SC_ADMIN_102</span>
+              <span class="sub-title">경영 매뉴얼 분류 체계– 편집</span>
               <div class="btn-wrap">
                 <a href="pages/SC_ADMIN_102.html" target="viewer">SC_ADMIN_102.html</a>
                 <a href="pages/SC_ADMIN_102.html" target="_blank" class="new-win">새창</a>
               </div>
             </li>
             <li class="bg2"> 
-              <span class="sub-title">SC_ADMIN_103</span>
+              <span class="sub-title">경영 매뉴얼 결재 모니터링</span>
               <div class="btn-wrap">
                 <a href="pages/SC_ADMIN_103.html" target="viewer">SC_ADMIN_103.html</a>
                 <a href="pages/SC_ADMIN_103.html" target="_blank" class="new-win">새창</a>
@@ -359,38 +373,38 @@
           <h2>시스템관리 [수급업체 작업표준]</h2>
           <ul>
             <li class="bg2"> 
-              <span class="sub-title">SC_ADMIN_201</span>
+              <span class="sub-title">수급업체 작업표준 결재 모니터링</span>
               <div class="btn-wrap">
                 <a href="pages/SC_ADMIN_201.html" target="viewer">SC_ADMIN_201.html</a>
                 <a href="pages/SC_ADMIN_201.html" target="_blank" class="new-win">새창</a>
               </div>
             </li>
             <li class="bg2"> 
-              <span class="sub-title">SC_ADMIN_202</span>
+              <span class="sub-title">폐기된 표준 목록</span>
               <div class="btn-wrap">
                 <a href="pages/SC_ADMIN_202.html" target="viewer">SC_ADMIN_202.html</a>
                 <a href="pages/SC_ADMIN_202.html" target="_blank" class="new-win">새창</a>
               </div>
             </li>
             <li class="bg2"> 
-              <span class="sub-title">SC_ADMIN_203</span>
+              <span class="sub-title">폐기된 표준 목록 (팝업)</span> 
               <div class="btn-wrap">
-                <a href="pages/SC_ADMIN_203.html" target="viewer">SC_ADMIN_203.html</a>
-                <a href="pages/SC_ADMIN_203.html" target="_blank" class="new-win">새창</a>
+                <a href="pages/SC_ADMIN_203_popup.html" target="viewer">SC_ADMIN_203_popup.html</a>
+                <a href="pages/SC_ADMIN_203_popup.html" target="_blank" class="new-win">새창</a>
               </div>
             </li>
           </ul>
           <h2>시스템관리 [인증기록 분류 체계]</h2>
           <ul>
             <li class="bg2"> 
-              <span class="sub-title">SC_ADMIN_301</span>
+              <span class="sub-title">인증 기록 - 분류 체계</span>
               <div class="btn-wrap">
                 <a href="pages/SC_ADMIN_301.html" target="viewer">SC_ADMIN_301.html</a>
                 <a href="pages/SC_ADMIN_301.html" target="_blank" class="new-win">새창</a>
               </div>
             </li>
             <li class="bg2"> 
-              <span class="sub-title">SC_ADMIN_302</span>
+              <span class="sub-title">인증 기록 분류 체계– 문서 구분 관리</span>
               <div class="btn-wrap">
                 <a href="pages/SC_ADMIN_302.html" target="viewer">SC_ADMIN_302.html</a>
                 <a href="pages/SC_ADMIN_302.html" target="_blank" class="new-win">새창</a>
@@ -400,7 +414,7 @@
           <h2>시스템관리 [이력 조회]</h2>
           <ul>
             <li class="bg2"> 
-              <span class="sub-title">SC_ADMIN_401</span>
+              <span class="sub-title">이력 조회</span>
               <div class="btn-wrap">
                 <a href="pages/SC_ADMIN_401.html" target="viewer">SC_ADMIN_401.html</a>
                 <a href="pages/SC_ADMIN_401.html" target="_blank" class="new-win">새창</a>
@@ -410,49 +424,49 @@
           <h2>시스템관리 [시스템관리]</h2>
           <ul>
             <li class="bg2"> 
-              <span class="sub-title">SC_ADMIN_501</span>
+              <span class="sub-title">부서 및 사용자 관리</span>
               <div class="btn-wrap">
                 <a href="pages/SC_ADMIN_501.html" target="viewer">SC_ADMIN_501.html</a>
                 <a href="pages/SC_ADMIN_501.html" target="_blank" class="new-win">새창</a>
               </div>
             </li>
             <li class="bg2"> 
-              <span class="sub-title">SC_ADMIN_502</span>
+              <span class="sub-title">사용자 - 편집</span>
               <div class="btn-wrap">
                 <a href="pages/SC_ADMIN_502.html" target="viewer">SC_ADMIN_502.html</a>
                 <a href="pages/SC_ADMIN_502.html" target="_blank" class="new-win">새창</a>
               </div>
             </li>
             <li class="bg2"> 
-              <span class="sub-title">SC_ADMIN_503</span>
+              <span class="sub-title">사용자 - 속성 조회 </span>
               <div class="btn-wrap">
                 <a href="pages/SC_ADMIN_503.html" target="viewer">SC_ADMIN_503.html</a>
                 <a href="pages/SC_ADMIN_503.html" target="_blank" class="new-win">새창</a>
               </div>
             </li>
             <li class="bg2"> 
-              <span class="sub-title">SC_ADMIN_504</span>
+              <span class="sub-title">시스템 그룹 관리</span> 
               <div class="btn-wrap">
                 <a href="pages/SC_ADMIN_504.html" target="viewer">SC_ADMIN_504.html</a>
                 <a href="pages/SC_ADMIN_504.html" target="_blank" class="new-win">새창</a>
               </div>
             </li>
             <li class="bg2"> 
-              <span class="sub-title">SC_ADMIN_505</span>
+              <span class="sub-title">시스템 관리 - 알림 메일 목록</span>
               <div class="btn-wrap">
                 <a href="pages/SC_ADMIN_505.html" target="viewer">SC_ADMIN_505.html</a>
                 <a href="pages/SC_ADMIN_505.html" target="_blank" class="new-win">새창</a>
-              </div>
+              </div> 
             </li>
             <li class="bg2"> 
-              <span class="sub-title">SC_ADMIN_506</span>
+              <span class="sub-title">시스템 관리 - 알림 메일 내용 편집</span>
               <div class="btn-wrap">
                 <a href="pages/SC_ADMIN_506.html" target="viewer">SC_ADMIN_506.html</a> 
                 <a href="pages/SC_ADMIN_506.html" target="_blank" class="new-win">새창</a>
               </div>
             </li>
             <li class="bg2"> 
-              <span class="sub-title">SC_ADMIN_507</span>
+              <span class="sub-title">시스템 관리 - 설정</span>
               <div class="btn-wrap">
                 <a href="pages/SC_ADMIN_507.html" target="viewer">SC_ADMIN_507.html</a>
                 <a href="pages/SC_ADMIN_507.html" target="_blank" class="new-win">새창</a>
