관리자 헤드메뉴 추가

--- a/admin_sitemap.html
+++ b/admin_sitemap.html
@@ -481,10 +481,10 @@
         <div class="range">
           <ul>
             <li>
-              <span class="sub-title">공통-레이아웃-메인</span>
+              <span class="sub-title">공통-관리자 레이아웃-메인</span>
               <div class="btn-wrap">
-                <a href="guide_pages/common_layout_main.html" target="viewer">common_layout_main.html</a>
-                <a href="guide_pages/common_layout_main.html" target="_blank" class="new-win">새창</a>
+                <a href="guide_pages/common_admin_layout_main.html" target="viewer">common_admin_layout_main.html</a>
+                <a href="guide_pages/common_admin_layout_main.html" target="_blank" class="new-win">새창</a>
               </div>
             </li>
             <li>
