--- a/pages/SC_ADMIN_001.html
+++ b/pages/SC_ADMIN_001.html
@@ -39,6 +39,31 @@
     <div class="container admin_container">
         <div class="inner">
 
+            <div class="content_wrap">
+
+                <!-- SNB -->
+                <div class="left_filter_cont">
+                    <ul class="snb">
+                        <li class="active"><a href="#" class="body16B"><i class="ico_snb admin_snb01"></i>관리표준 분류 체계</a></li>
+                        <li><a href="#" class="body16B"><i class="ico_snb admin_snb02"></i>기술표준 분류 체계</a></li>
+                        <li><a href="#" class="body16B"><i class="ico_snb admin_snb03"></i>유효성 평가표</a></li>
+                        <li><a href="#" class="body16B"><i class="ico_snb admin_snb04"></i>결재 모니터링</a></li>
+                        <li><a href="#" class="body16B"><i class="ico_snb admin_snb05"></i>담당 부서 삭제된 표준</a></li>
+                        <li><a href="#" class="body16B"><i class="ico_snb admin_snb06"></i>폐기된 표준</a></li>
+                    </ul>
+                </div>
+                <!-- //SNB -->
+
+
+                <div class="content">
+                    <ol class="breadcrumb">
+                        <li>표준 관리</li>
+                        <li class="on">관리표준 분류 체계</li>
+                    </ol>
+
+                </div>
+            </div>
+
         </div>
     </div>
     <!-- //container -->
