001/표준-분류체계 완료.

--- a/admin_sitemap.html
+++ b/admin_sitemap.html
@@ -348,7 +348,7 @@
           <h2>시스템관리 [경영매뉴얼]</h2>
           <ul>
             <li class="bg2"> 
-              <span class="sub-title">경영매뉴얼 - 분류체계</span>
+              <span class="sub-title">경영매뉴얼 - 분류체계 (<em class="fc-red">작업중</em>)</span>
               <div class="btn-wrap">
                 <a href="pages/SC_ADMIN_101.html" target="viewer">SC_ADMIN_101.html</a>
                 <a href="pages/SC_ADMIN_101.html" target="_blank" class="new-win">새창</a>
@@ -397,7 +397,7 @@
           <h2>시스템관리 [인증기록 분류 체계]</h2>
           <ul>
             <li class="bg2"> 
-              <span class="sub-title">인증 기록 - 분류 체계</span>
+              <span class="sub-title">인증 기록 - 분류 체계 (<em class="fc-red">작업중</em>)</span>
               <div class="btn-wrap">
                 <a href="pages/SC_ADMIN_301.html" target="viewer">SC_ADMIN_301.html</a>
                 <a href="pages/SC_ADMIN_301.html" target="_blank" class="new-win">새창</a>
@@ -424,7 +424,7 @@
           <h2>시스템관리 [시스템관리]</h2>
           <ul>
             <li class="bg2"> 
-              <span class="sub-title">부서 및 사용자 관리</span>
+              <span class="sub-title">부서 및 사용자 관리  (<em class="fc-red">작업중</em>)</span>
               <div class="btn-wrap">
                 <a href="pages/SC_ADMIN_501.html" target="viewer">SC_ADMIN_501.html</a>
                 <a href="pages/SC_ADMIN_501.html" target="_blank" class="new-win">새창</a>
@@ -445,7 +445,7 @@
               </div>
             </li>
             <li class="bg2"> 
-              <span class="sub-title">시스템 그룹 관리</span> 
+              <span class="sub-title">시스템 그룹 관리 (<em class="fc-red">작업중</em>)</span> 
               <div class="btn-wrap">
                 <a href="pages/SC_ADMIN_504.html" target="viewer">SC_ADMIN_504.html</a>
                 <a href="pages/SC_ADMIN_504.html" target="_blank" class="new-win">새창</a>
